@@ -9,6 +9,8 @@
     Rouhaud, thanks to Adrien Di Mascio for the report)
   - Fix compatibility with SQLAlchemy 1.3+ (Julien Rouhaud, thanks to github
     user mchubby and irc user ChOcO-Bn for the report)
+  - Fix query detail if no data is found on the selected range (Julien Rouhaud,
+    thanks to irc user ChOcO-Bn for the report)
 3.2.0:
   - Add support for pg_wait_sampling to display wait events statistics and
     graphs, require pg9.6+ (Julien Rouhaud)
